--- a/style.css
+++ b/style.css
@@ -145,6 +145,13 @@ body {
     margin-bottom: 50px;
 }
 
+.division-teams-instruction {
+    text-align: center;
+    color: rgb(245, 206, 26);
+    font-weight: 600;
+    text-decoration: underline;
+}
+
 .teams {
     margin-top: 50px;
     display: flex;
@@ -532,6 +539,197 @@ table {
       background-color: black;
   }
 
+/*Team page*/
+
+.team-profile-heading {
+    margin-top: 100px;
+    text-align: center;
+    color: white;
+    text-decoration: underline;
+    font-weight: 700;
+}
+
+.team-profile-area {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 50px;
+    padding-top: 30px;
+}
+
+.team-profile {
+    display: flex;
+    width: 470px;
+    background-color: #191b1e;
+    padding: 25px;
+    border-radius: 10px;
+}
+
+.team-image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.team-profile-logo {
+    width: 150px;
+    height: 250px;
+}
+
+.team-name {
+    margin-top: 10px;
+    color: white;
+}
+
+.team-information {
+    margin-top: 50px;
+    margin-left: 100px;
+}
+
+.team-league-heading, .team-score-heading, .team-position-heading {
+    color: rgb(245, 206, 26);
+    text-decoration: underline;
+    font-weight: 700;
+}
+
+.team-league, .team-score, .team-position {
+    color: white;
+    font-weight: 600;
+
+}
+
+.team-member-area {
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding-left: 20%;
+}
+
+.team-member-heading {
+    text-align: center;
+    color: white;
+    font-weight: 700;
+    text-decoration: underline;
+    margin-top: 100px;
+}
+
+.team-member-left {
+    display: flex;
+}
+
+.team-member-right {
+    display: flex;
+    margin-left: 25%;
+}
+
+.team-member-image {
+    width: 230px;
+    height: 200px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+    border: 1.5px solid rgb(245, 206, 26);
+}
+
+.team-member-information {
+    padding-top: 20px;
+}
+
+.team-member-name {
+    color: white;
+    font-weight: 700;
+}
+
+.team-member-tag {
+    color: rgb(245, 206, 26);
+    margin-bottom: 20px;
+}
+
+.team-member-location, .team-member-position {
+    color: white;
+}
+
+.team-member-row {
+    display: flex;
+}
+
+
+.team-results-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-left: 2%;
+}
+
+.team-results-heading {
+    text-align: center;
+    color: white;
+    text-decoration: underline;
+    font-weight: 700;
+}
+
+.team-result {
+    display: flex;
+    width: 320px;
+    background-color: #191b1e;
+    padding: 20px;
+    margin-right: 50px;
+    border-radius: 10px;
+}
+
+.result-team-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.result-team-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 40px;
+}
+
+.team-result-name {
+    color: white;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.team-result-logo {
+    width: 60px;
+    height: 70px;
+}
+
+.team-result-score-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 40px;
+}
+
+.team-result-league, .team-result-date {
+    margin-bottom: 0;
+    font-size: 10px;
+    font-weight: 600;
+    color: rgb(245, 206, 26);
+}
+
+.team-result-score {
+    color: white;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.team-result-row {
+    display: flex;
+    margin-top: 30px;
+}
 
 
   
