--- a/style.css
+++ b/style.css
@@ -77,10 +77,10 @@ body {
     display: flex;
     align-items: center;
     flex-direction: row;
-    padding-top: 80px;
-    padding-left: 300px;
-    padding-right: 300px;
-    padding-bottom: 50px;
+    padding-top: 5%;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-bottom: 3%;
     background-color: rgba(72, 2, 1, 1);
 }
 
@@ -95,11 +95,11 @@ body {
 }
 
 .about-content {
-    margin-right: 30px;
+    margin-right: 5%;
 }
 
 .about-information {
-    margin-top: 20px;
+    margin-top: 2%;
     color: white;
 }
 
@@ -121,7 +121,7 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
+    padding-top: 3%;
 }
 
 .division-heading {
@@ -153,7 +153,7 @@ body {
 }
 
 .teams {
-    margin-top: 50px;
+    margin-top: 4%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -168,7 +168,7 @@ body {
 }
 
 .team-logo {
-    margin-right: 30px;
+    margin-right: 3%;
     width: 100px;
     height: 100px;
 }
@@ -181,8 +181,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 50px;
-    padding-top: 30px;
+    padding-bottom: 3%;
+    padding-top: 2%;
     background-color: rgba(72, 2, 1, 1);
 }
 
@@ -192,7 +192,7 @@ body {
     font-weight: 700;
     color: white;
     text-decoration: underline;
-    margin-bottom: 50px;
+    margin-bottom: 3%;
     text-shadow: 2px 2px 4px #000000;
 }
 
@@ -219,8 +219,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-bottom: 50px;
-    padding-top: 30px;
+    padding-bottom: 3%;
+    padding-top: 2%;
 }
 
 .merch-heading {
@@ -234,7 +234,7 @@ body {
 }
 
 .merch-image {
-    margin-top: 50px;
+    margin-top: 3%;
 }
 
 .merch-contact-area {
@@ -270,8 +270,16 @@ body {
     color: white;
 }
 
+#footer-container {
+    margin-top: 0;
+}
+
 .footer-container {
-    margin-top: 60px;
+    margin-top: 2%;
+}
+
+#footer-area {
+    background-color: black;
 }
 
 .footer-area {
@@ -280,6 +288,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgba(72, 2, 1, 1);
+    padding-bottom: 20px;
 }
 
 .footer-socials {
@@ -288,6 +297,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    margin-left: 1.5%;
 }
 
 .footer-end {
@@ -317,13 +327,13 @@ body {
     align-items: center;
     text-align: center;
     color: white;
-    padding-top: 90px;
+    padding-top: 5%;
     background-color: rgba(72, 2, 1, 1);
-    padding-bottom: 10px;
+    padding-bottom: .5%;
 }
 
 .gallery-heading-center, .division-heading-center {
-    margin-left: 50px;
+    margin-left: 3%;
 }
 
 .gallery-heading-image, .division-heading-image {
@@ -331,7 +341,7 @@ body {
 }
 
 #gallery-heading-image, #division-heading-image {
-    margin-left: 50px;
+    margin-left: 2%;
     width: 70px;
     height: 70px;
 }
@@ -353,13 +363,13 @@ body {
 .carousel-heading {
     text-align: center;
     color: white;
-    margin-top: 50px;
+    margin-top: 3%;
     text-decoration: underline;
 }
 
 #carouselExampleSlidesOnly {
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 3%;
     width: 1000px; 
     border-radius: 10px;
 }
@@ -371,10 +381,9 @@ body {
 }
 
 .gallery-images-area {
-   padding-top: 50px;
-   padding-right: 30px;
-   padding-left: 30px;
-   padding-bottom: 20px;
+   padding-top: 3%;
+   padding-right: 2%;
+   padding-left: 2%;
 }
 
 .gallery-images {
@@ -406,12 +415,16 @@ body {
     font-size: 30px;
 }
 
-.league-champions {
+.league-champions-area {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+.league-champions {
+    display: flex;
 }
 
 .league-champion-date {
@@ -500,7 +513,7 @@ table {
 
   #headingOne, #headingTwo, #headingThree {
       margin-left: 39.5%;
-      width: 400px;
+      width: 22%;
       text-align: center;
       background-color: rgba(72, 2, 1, 1);
       border-radius: 10px;
@@ -542,24 +555,30 @@ table {
 /*Team page*/
 
 .team-profile-heading {
-    margin-top: 100px;
+    margin-top: 70px;
     text-align: center;
     color: white;
     text-decoration: underline;
     font-weight: 700;
 }
 
+#team-profile-area {
+    background-color: rgba(72, 2, 1, 1);
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 .team-profile-area {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 30px;
     padding-top: 30px;
 }
 
 .team-profile {
     display: flex;
-    width: 470px;
+    width: 550px;
     background-color: #191b1e;
     padding: 25px;
     border-radius: 10px;
@@ -584,7 +603,7 @@ table {
 
 .team-information {
     margin-top: 50px;
-    margin-left: 100px;
+    margin-left: 120px;
 }
 
 .team-league-heading, .team-score-heading, .team-position-heading {
@@ -604,6 +623,7 @@ table {
     flex-direction: column;
     margin-top: 100px;
     padding-left: 20%;
+    padding-bottom: 30px;
 }
 
 .team-member-heading {
@@ -611,7 +631,7 @@ table {
     color: white;
     font-weight: 700;
     text-decoration: underline;
-    margin-top: 100px;
+    margin-top: 70px;
 }
 
 .team-member-link-right {
@@ -660,6 +680,11 @@ table {
     display: flex;
 }
 
+#team-results-area {
+    background-color: rgba(72, 2, 1, 1);
+    padding-bottom: 30px;
+    padding-top: 30px;
+}
 
 .team-results-area {
     display: flex;
@@ -757,7 +782,6 @@ table {
 .member-image {
     width: 250px;
     height: 250px;
-    border: 1px solid rgb(245, 206, 26);
 }
 
 .member-stats-area {
@@ -782,7 +806,7 @@ table {
 }
 
 .member-stats-heading {
-    margin-top: 80px;
+    margin-top: 50px;
     text-align: center;
     color: white;
     text-decoration: underline;
